--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MISIS but smaller</title>
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <header>
       <h1>MISIS but smaller</h1>
     </header>
     <nav>
       <ul class="nav_ul">
         <li><a href="index.html">Главная</a></li>
+        <li><a href="pages/teacher.html">Преподаватель</a></li>
         <li><a href="pages/potok.html">Поток БИВТ-22-(1-5)</a></li>
         <li><a href="pages/groups/bivt1.html">БИВТ-22-1</a></li>
         <li><a href="https://misis.ru/" target="_blank">МИСИС</a></li>
@@ -21,7 +33,10 @@
     <hr />
     <main class="">
       <h3>Всем привет!</h3>
-      <p>На связи поток БИВТ-22-(1-5). На этом сайте вы можете познакомится с каждой из групп </p>
+      <p>
+        На связи поток БИВТ-22-(1-5). На этом сайте вы можете познакомится с
+        каждой из групп
+      </p>
     </main>
     <hr />
     <footer>
