--- a/pages/potok.html
+++ b/pages/potok.html
@@ -13,6 +13,7 @@
     <nav>
       <ul>
         <li><a href="../index.html">Главная</a></li>
+        <li><a href="teacher.html">Преподаватель</a></li>
         <li><a href="potok.html">Поток БИВТ-22-(1-5)</a></li>
         <li><a href="groups/bivt1.html">БИВТ-22-1</a></li>
         <li><a href="https://misis.ru/" target="_blank">МИСИС</a></li>
